--- a/index.html
+++ b/index.html
@@ -5,32 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video Embed</title>
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      height: 100%;
+      background: #000;
+    }
+
+    /* Container that fills the entire viewport */
+    .video-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      background: #000;
+    }
+
+    /* Responsive iframe that scales to fit */
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
     }
   </style>
 </head>
 <body>
 
-  <iframe
-    id="player"
-    frameborder="0"
-  ></iframe>
+  <div class="video-container">
+    <iframe id="player"></iframe>
+  </div>
 
   <script>
-    // Read the "video" query parameter
     const params = new URLSearchParams(window.location.search);
-    const videoId = params.get("video") || "evRhRCAu2t0"; // fallback ID
+    const videoId = params.get("video") || "evRhRCAu2t0";
 
-    // Build the YouTube embed URL
     const src = `https://www.youtube.com/embed/${videoId}?playsinline=1&rel=0&modestbranding=1`;
 
-    // Apply it to the iframe
     document.getElementById("player").src = src;
   </script>
 
